added functionality, fixed bug with auth

--- a/assets/main.css
+++ b/assets/main.css
@@ -11,6 +11,7 @@
   --primary-background-clr: #2D2E2E;
   --secondary-background-clr: #716969;
   --tertiary-background-clr: #0F0F0F;
+  --black-background-clr: #000000;
 
   --primary-background-clr-a: #2D2E2Ec0;
 
