adjusted for pocketbase

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -5,6 +7,7 @@
   margin: 0;
   padding: 0;
   font-family: inherit;
+  line-height: 1;
 }
 
 :root {
@@ -18,6 +21,8 @@
   --primary-clr: #05A8AA;
   --secondary-clr: #7CDEDC;
 
+  --header-height: 90px;
+
   color-scheme: dark light;
 }
 
@@ -25,12 +30,8 @@
   background-color: var(--primary-clr);
 }
 
-html {
-  scrollbar-gutter: stable;
-}
-
 body {
-  font-family: system-ui, sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary-background-clr);
