--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 0;
   font-family: inherit;
-  line-height: 1;
+  line-height: 1.6;
 }
 
 :root {
@@ -36,6 +36,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary-background-clr);
   color: #fff;
+
+  &:has(dialog[open]) {
+    overflow: hidden;
+  }
 }
 
 img {
